--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/yachaka/Thunder#readme",
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "local-modules-as-globals": "0.0.3",
     "nodemon": "^1.9.2"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.1",
+    "express": "^4.14.0",
+    "superagent": "^2.0.0",
+    "superagent-promise-plugin": "^3.2.0"
   }
 }
