--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nodemon": "^1.9.2"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "chalk": "^1.1.3",
+    "express": "^4.14.0",
+    "websocket": "^1.0.23"
   }
 }
