--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "description": "Get struck by the God's data",
   "main": "index.js",
+  "pre-commit": "lint",
   "scripts": {
-    "start": "nodemon --exec babel-node -- index.js"
+    "start": "nodemon --exec babel-node -- index.js",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,13 @@
   "homepage": "https://github.com/yachaka/Thunder#readme",
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.9.0",
+    "eslint": "^2.13.0",
+    "eslint-config-zavatta": "^3.0.2",
     "local-modules-as-globals": "0.0.3",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "pre-commit": "^1.1.3"
   },
   "dependencies": {
     "chalk": "^1.1.3",
