--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "pre-commit": "lint",
   "scripts": {
     "start": "nodemon --exec babel-node -- index.js",
-    "lint": "eslint src"
+    "lint": "eslint src/"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "superagent": "^2.0.0",
     "websocket": "^1.0.23"
   }
 }
