--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-cli": "^6.10.1",
     "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "eslint": "^2.13.0",
     "eslint-config-zavatta": "^3.0.2",
     "local-modules-as-globals": "0.0.3",
